# rep

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  install.sh  mise.toml
.claude/skills/release/: SKILL.md
.claude/skills/rep/: SKILL.md
.github/workflows/: ci.yml  release.yml
docs/operations/: tasks.md
src/: applier.rs  artifacts.rs  cli.rs  config.rs  error.rs  globset.rs  lib.rs  main.rs  path_rename.rs  planner.rs  rename_derive.rs  residual.rs  scanner.rs  schema.rs  scope.rs  show.rs  status.rs  text.rs
src/git/: mod.rs  mutation.rs  query.rs
src/output/: mod.rs  style.rs
tests/: cli.rs
