[package]
name = "rep"
version = "0.1.0"
edition = "2024"
authors = ["zawakin"]
description = "Safe, machine-readable rename & token migration for git repositories"
license = "MIT OR Apache-2.0"
repository = "https://github.com/lanegrid/rep"
homepage = "https://github.com/lanegrid/rep"
readme = "README.md"
keywords = ["git", "rename", "refactor", "cli", "migration"]
categories = ["command-line-utilities", "development-tools"]
rust-version = "1.85"

[[bin]]
name = "rep"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "1.0"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
